--- a/app/src/main/res/layout/activity_manage_byos.xml
+++ b/app/src/main/res/layout/activity_manage_byos.xml
@@ -6,12 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".ManageByos">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/btn_add_byo"
-        android:id="@+id/recycler_byo"/>
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="0dp"
+       app:layout_constraintTop_toTopOf="parent"
+       android:id="@+id/layout_manage_byos"
+       app:layout_constraintBottom_toTopOf="@id/btn_add_byo"
+       android:orientation="vertical"/>
 
     <Button
         android:layout_width="match_parent"
