--- a/app/src/main/res/layout/activity_manage_events.xml
+++ b/app/src/main/res/layout/activity_manage_events.xml
@@ -5,5 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ManageEvents">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/layout_manage_events"
+        app:layout_constraintBottom_toTopOf="@id/btn_add_event"
+        android:orientation="vertical"/>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="+"
+        android:id="@+id/btn_add_event"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
