--- a/app/src/main/res/layout/activity_create_byo.xml
+++ b/app/src/main/res/layout/activity_create_byo.xml
@@ -36,6 +36,14 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="כתובת" />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/byo_venue_address"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="מספר משתתפים מקסימלי" />
         <SeekBar
             android:layout_width="match_parent"
