--- a/app/src/main/res/layout/activity_create_byo.xml
+++ b/app/src/main/res/layout/activity_create_byo.xml
@@ -40,6 +40,7 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="text"
             android:id="@+id/byo_venue_address"/>
         <TextView
             android:layout_width="match_parent"
