--- a/app/src/main/res/layout/byo_display.xml
+++ b/app/src/main/res/layout/byo_display.xml
@@ -11,11 +11,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/byo_display_title"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <net.steamcrafted.materialiconlib.MaterialIconView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/byo_display_title"
         android:id="@+id/byo_display_icon"/>
+    <net.steamcrafted.materialiconlib.MaterialIconView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/byo_display_title"
+        android:id="@+id/byo_display_icon_sub"/>
+    </LinearLayout>
 
 
 </LinearLayout>
