--- a/app/src/main/res/layout/activity_create_byo.xml
+++ b/app/src/main/res/layout/activity_create_byo.xml
@@ -10,23 +10,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/creat_byo_btns"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="מה יש לך להציע:" />
+            android:text="מה יש לך להציע" />
 
         <EditText
             android:id="@+id/byo_title_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="בחר קטגוריה:" />
+            android:text="בחר קטגוריה" />
 
         <Spinner
             android:id="@+id/byo_type_spinner"
@@ -37,6 +40,9 @@
             android:id="@+id/byo_subtype_spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp"/>
 
         <TextView
             android:id="@+id/byo_venue_address_text"
@@ -48,22 +54,53 @@
             android:id="@+id/byo_venue_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text" />
+            android:inputType="textPostalAddress" />
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="מספר משתתפים מקסימלי" />
+            android:text="מספר משתתפים מקסימלי"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/create_byo_max_text"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <SeekBar
             android:id="@+id/byo_max_part"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-
-        <TextView
+        <Space
             android:layout_width="match_parent"
+            android:layout_height="20dp"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <TextView
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="מחיר" />
+            <TextView
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/create_byo_price_text"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <SeekBar
             android:id="@+id/byo_price"
@@ -80,12 +117,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <!-- move button to bottom  -->
+
+    </LinearLayout>
+    <LinearLayout android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/creat_byo_btns">
         <Button
             android:id="@+id/btn_save_byos"
             android:layout_width="match_parent"
-
             android:layout_height="wrap_content"
-            android:text="סיום" />
-
+            android:text="שמור" />
+        <Button
+            android:id="@+id/btn_delete_byos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="מחק" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
