--- a/app/src/main/res/layout/activity_create_byo.xml
+++ b/app/src/main/res/layout/activity_create_byo.xml
@@ -8,10 +8,11 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@id/creat_byo_btns"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:scrollbars="vertical">
 
         <TextView
             android:layout_width="match_parent"
@@ -106,7 +107,9 @@
             android:id="@+id/byo_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -115,8 +118,9 @@
         <EditText
             android:id="@+id/byo_description_text"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <!-- move button to bottom  -->
+            android:layout_height="wrap_content"
+            android:inputType="textMultiLine"
+            android:scrollbars="vertical"/>
 
     </LinearLayout>
     <LinearLayout android:orientation="vertical"
