--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
         <!-- Customize your theme here. -->
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowFullscreen">false</item>
 
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -12,6 +12,7 @@
         <item name="android:layoutDirection">rtl</item>
         <item name="android:layout_margin">2dp</item>
         <item name="android:textSize">20sp</item>
+        <item name="android:buttonStyle">@style/Widget.AppCompat.Button.Colored</item>
 
     </style>
 
