--- a/app/src/main/res/layout/activity_byo_choose.xml
+++ b/app/src/main/res/layout/activity_byo_choose.xml
@@ -37,12 +37,17 @@
         android:layout_width="match_parent"
         android:layout_height="20dp"
         android:id="@+id/choose_byo_space"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/choose_byo_space"
+        app:layout_constraintBottom_toBottomOf="parent">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/choose_byo_space"
-        app:layout_constraintBottom_toBottomOf="parent"
+
         android:id="@+id/choose_byo_layout"/>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
