--- a/app/src/main/res/layout/activity_create_byo.xml
+++ b/app/src/main/res/layout/activity_create_byo.xml
@@ -5,13 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CreateByo">
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    app:layout_constraintBottom_toTopOf="@id/creat_byo_btns"
+    app:layout_constraintTop_toTopOf="parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@id/creat_byo_btns"
-        app:layout_constraintTop_toTopOf="parent"
+
         android:scrollbars="vertical">
 
         <TextView
@@ -123,6 +126,7 @@
             android:scrollbars="vertical"/>
 
     </LinearLayout>
+</ScrollView>
     <LinearLayout android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
@@ -132,11 +136,12 @@
             android:id="@+id/btn_save_byos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="שמור" />
+            android:text="שמירה" />
         <Button
+            android:backgroundTint="@color/colorPrimaryDark"
             android:id="@+id/btn_delete_byos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="מחק" />
+            android:text="מחיקה" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
