--- a/app/src/main/res/layout/activity_manage_events.xml
+++ b/app/src/main/res/layout/activity_manage_events.xml
@@ -5,18 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ManageEvents">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/btn_add_event"
+        app:layout_constraintTop_toTopOf="parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/layout_manage_events"
-        app:layout_constraintBottom_toTopOf="@id/btn_add_event"
         android:orientation="vertical"/>
+    </ScrollView>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="+"
+        android:text="הוספת אירוע"
         android:id="@+id/btn_add_event"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
