--- a/app/src/main/res/layout/byo_display.xml
+++ b/app/src/main/res/layout/byo_display.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
-
+    xmlns:card_view="http://schemas.android.com/tools"
+    card_view:cardBackgroundColor="#E6E6E6"
+    card_view:cardCornerRadius="8dp"
+    card_view:cardElevation="8dp"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:focusable="true"
+    android:layout_margin="4dp">
+<LinearLayout
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,11 +24,15 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
     <net.steamcrafted.materialiconlib.MaterialIconView
+        app:materialIconColor="@color/colorPrimary"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/byo_display_title"
         android:id="@+id/byo_display_icon"/>
     <net.steamcrafted.materialiconlib.MaterialIconView
+        app:materialIconColor="@color/colorPrimary"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/byo_display_title"
@@ -34,7 +48,5 @@
         android:id="@+id/byo_display_id"
         android:visibility="gone"/>
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="20dp"/>
 </LinearLayout>
+</androidx.cardview.widget.CardView>
