--- a/app/src/main/res/layout/activity_user_menu2.xml
+++ b/app/src/main/res/layout/activity_user_menu2.xml
@@ -11,6 +11,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
+    <ImageView
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:id="@+id/menu_image"
+        android:src="@raw/person"
+        android:layout_gravity="center"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
