--- a/app/src/main/res/layout/byo_display.xml
+++ b/app/src/main/res/layout/byo_display.xml
@@ -11,42 +11,51 @@
     android:foreground="?android:attr/selectableItemBackground"
     android:focusable="true"
     android:layout_margin="4dp">
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <TextView
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/byo_display_title"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:id="@+id/byo_display_title"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/byo_display_icon"/>
+
     <net.steamcrafted.materialiconlib.MaterialIconView
         app:materialIconColor="@color/colorPrimary"
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/byo_display_title"
-        android:id="@+id/byo_display_icon"/>
+app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/byo_display_icon"
+        app:layout_constraintLeft_toRightOf="@id/byo_display_icon_sub"/>
     <net.steamcrafted.materialiconlib.MaterialIconView
         app:materialIconColor="@color/colorPrimary"
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/byo_display_icon_sub"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+    <RatingBar
         app:layout_constraintTop_toBottomOf="@id/byo_display_title"
-        android:id="@+id/byo_display_icon_sub"/>
-    </LinearLayout>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/byo_display_rate"
+        android:numStars="5" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/byo_display_email"/>
+        android:id="@+id/byo_display_email"
+        app:layout_constraintTop_toBottomOf="@id/byo_display_rate"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/byo_display_id"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        card_view:ignore="MissingConstraints" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
