--- a/app/src/main/res/layout/byo_display.xml
+++ b/app/src/main/res/layout/byo_display.xml
@@ -40,11 +40,18 @@ app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/byo_display_icon_sub"
         app:layout_constraintLeft_toLeftOf="parent"/>
     <RatingBar
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/byo_display_title"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/byo_display_rate"
-        android:numStars="5" />
+        android:isIndicator="true"
+        android:numStars="5"
+        android:stepSize="0.1"
+
+        />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
