--- a/app/src/main/res/layout/activity_all_events.xml
+++ b/app/src/main/res/layout/activity_all_events.xml
@@ -5,6 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AllEvents">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@raw/image2"
+        android:scaleType="centerCrop"
+        android:alpha="0.8"
+        android:layout_margin="0dp"
+        android:padding="0dp"/>
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent">
