--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,11 @@
     android:src="@raw/image3"
     android:scaleType="centerCrop"
     android:alpha="0.8"
-    android:layout_margin="0dp"/>
+    android:layout_margin="0dp"
+    android:cropToPadding="false"
+    android:adjustViewBounds="true"
+    android:padding="0dp"
+    />
 
     <net.steamcrafted.materialiconlib.MaterialIconView
         android:layout_width="wrap_content"
@@ -30,10 +34,10 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
         android:id="@+id/main_events"
-        android:text="בואו נתחבר"
-        android:textSize="30sp"/>
+        android:text="כנסו לעניינים!"
+        android:textSize="20sp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
