--- a/app/src/main/res/layout/activity_user_menu2.xml
+++ b/app/src/main/res/layout/activity_user_menu2.xml
@@ -8,29 +8,34 @@
 <LinearLayout
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent">
     <ImageView
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:id="@+id/menu_image"
         android:src="@raw/person"
         android:layout_gravity="center"/>
-    <Button
+    <Space
         android:layout_width="match_parent"
+        android:layout_height="50dp"/>
+    <Button
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
 
         android:text="ניהול ברינגים"
         android:id="@+id/btn_manage_byos"/>
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:text="ניהול אירועים"
         android:id="@+id/btn_manage_events"/>
     <Button
         android:backgroundTint="@color/colorPrimaryDark"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:text="התנתקות"
         android:id="@+id/btn_log_out"/>
