--- a/app/src/main/res/layout/activity_create_byo.xml
+++ b/app/src/main/res/layout/activity_create_byo.xml
@@ -91,6 +91,7 @@
             android:layout_height="20dp"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         <TextView
@@ -108,11 +109,13 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <SeekBar
+            android:visibility="gone"
             android:id="@+id/byo_price"
             style="@style/Widget.AppCompat.SeekBar.Discrete"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <Space
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="20dp"/>
         <TextView
