--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,7 @@
     android:layout_margin="0dp"
     android:cropToPadding="false"
     android:adjustViewBounds="true"
-    android:padding="0dp"
-    />
+    android:padding="0dp"    />
 
     <net.steamcrafted.materialiconlib.MaterialIconView
         android:layout_width="wrap_content"
